--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
 name: CI
 
-on:
-  pull_request:
-  push:
-    branches:
-      - master
+on: [pull_request]
 
 jobs:
   build:
@@ -28,17 +24,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make license-check
-
-      - name: Check Diff
-        run: |
-          make check-diff
-
-      - name: Lint
-        env:
-          LINTER_FLAGS: '--timeout 5m'
-        run: |
-          make lint
-
-      - name: Run tests
-        run: |
-          make test
+#
+#      - name: Lint Helm charts
+#        id: lint
+#        uses: helm/chart-testing-action@dev-v2
+#        with:
+#          command: lint
+#          config: charts/helm_testing.yaml
